# solboard

./: CMakeLists.txt  Funny.txt  INSTALL  README.md  documentation.txt  generate-boards-files.c  libsolitaire.c  libsolitaire.h  list-opti.c  list-opti.h  play.c  showboardfile.c  statboardfile.c  story.txt
